--- a/.gitignore
+++ b/.gitignore
@@ -182,4 +182,7 @@ dmypy.json
 # profiling data
 .prof
 
+# data
+data/
+/data
 # End of https://www.toptal.com/developers/gitignore/api/macos,jupyternotebooks,python
